# poultryguard-ai

./: .env.example  .gitignore  AI_DEVELOPER_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_MEMORY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: README.md
app/backend/: README.md  __init__.py  main.py
app/config/: README.md  __init__.py
app/frontend/: README.md
app/services/: README.md  __init__.py
app/utils/: README.md  __init__.py
assets/: README.md
benchmarks/: README.md  benchmark_placeholder.py
datasets/: README.md
datasets/processed/: README.md
datasets/raw/: README.md
datasets/synthetic/: README.md
demo/: README.md
docs/: README.md  knowledge_base_schema.md  knowledge_engineering.md  project_plan.md
docs/api/: README.md
docs/architecture/: README.md  adtc_alignment.md  data_flow.md  deployment.md  model_selection.md  rag_design.md  software_architecture.md  system_overview.md
docs/benchmarks/: README.md
docs/deployment/: README.md
evaluation/: README.md  __init__.py
knowledge_base/: README.md
models/: README.md  __init__.py
notebooks/: README.md
profiler/: README.md  profile_placeholder.py
rag/: README.md  __init__.py
report/: README.md
scripts/: README.md  build_index_preview.py  validate_knowledge_base.py  validate_links.py  validate_metadata.py  validate_references.py  validate_scaffold.py
tests/: README.md  test_scaffold.py
vector_store/: README.md
(+66 files in other folders)
