[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poultryguard-ai"
version = "0.0.0"
description = "Offline AI-powered poultry health and farm management assistant for ADTC 2026."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "PoultryGuard AI Contributors" }
]
keywords = [
  "offline-ai",
  "poultry",
  "rag",
  "llama-cpp",
  "faiss",
  "agritech",
  "adtc"
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "rag*", "models*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["app", "rag", "models", "tests", "benchmarks", "evaluation", "profiler", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

